data/all_generated_tests/raw_wast_tests/call_indirect_TypeMismatchinControlFlowInstructions_4570.wast
;; 9. **Invalid Operand Type Prior to `call_indirect`:**    - Validate behavior when the type of operands on the stack before executing `call_indirect` does not match the expected input types of the target function. The test should confirm both implementations accurately trap due to operand type mismatch.

(assert_invalid
  (module
    (type (func (param i32 i32) (result i32)))
    (table funcref (elem 0) (elem 0))
    (func (result i32)
      (i64.const 0) 
      (call_indirect (type 0) (i32.const 0) (i32.const 0))
    )
  )
  "type mismatch"
)